--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
           <ul class="navbar">
 
-            <li><a href="index.html.html">Home</a></li>
-            <li><a href="contact.html.html">Contact</a></li>
-            <li><a href="collection.html.html"></a>collection</li>
-            <li><a href="bio.html.html">Biography</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="collection.html"></a>collection</li>
+            <li><a href="bio.html">Biography</a></li>
 
           </ul>
 
