--- a/collection.html
+++ b/collection.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My cv</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <header>
         <h1 class="logo-text">collection</h1>
     </header>
