--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact me</title>
-      <link rel="stylesheet" href="css/styles.css">
+      <link rel="stylesheet" href="css/style.css">
   </head>
   <header>
       <h1 class="logo-text">Contact</h1>
