--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>my webpage</title>
-      <link rel="stylesheet" href="css/styles.css">
+      <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
