--- a/collection.html
+++ b/collection.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My cv</title>
+    <title>collection</title>
     <link rel="stylesheet" href="css/style.css">
     <header>
         <h1 class="logo-text">collection</h1>
