--- a/collection.html
+++ b/collection.html
@@ -34,7 +34,7 @@
 
 
 
-    <footer class="footer">  <p>webpage of Abdullahi</p>
+    <footer class="footer">  <p>Created by Abdullahi</p>
     <p>Contact Email: Abdull@hotmail.co.uk</p>
 
 
